better explanation of passing with an erroring cell

--- a/notebooks/notebooks_test.ipynb
+++ b/notebooks/notebooks_test.ipynb
@@ -51,14 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-04-14T22:00:47.568416Z",
-     "iopub.status.busy": "2022-04-14T22:00:47.568047Z",
-     "iopub.status.idle": "2022-04-14T22:00:47.578799Z",
-     "shell.execute_reply": "2022-04-14T22:00:47.578270Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -104,7 +97,25 @@
     "---------------------------------------------------------------------------\n",
     "```\n",
     "\n",
-    "But if we set the following path in the notebooks json to `true`, then even though the cell still behaves as expected, it doesn't halt pytest's execution, and the pytest passes as well:\n",
+    "But if we set the path `metadata.execution.allows_errors` in the notebook's JSON to `true`, \n",
+    "then even though the cell still behaves as expected, it doesn't halt `pytest`'s execution, and `pytest` passes as well.\n",
+    "\n",
+    "IE: editing the notebook `*.ipynb` as JSON:\n",
+    "\n",
+    "```json\n",
+    "# Set the path `metadata.execution.allows_errors = true`\n",
+    "{\n",
+    "    \"cells\": [ ... ],\n",
+    "    ...\n",
+    "    \"metadata\": {\n",
+    "      \"execution\": {\n",
+    "       \"allow_errors\": true\n",
+    "      },\n",
+    "    ...\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Now when you run `pytest`, the notebook won't fail even though the cell errors:\n",
     "\n",
     "```sh\n",
     "❯ pytest --nbmake notebooks\n",
@@ -122,14 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-04-14T22:00:47.601519Z",
-     "iopub.status.busy": "2022-04-14T22:00:47.601305Z",
-     "iopub.status.idle": "2022-04-14T22:00:47.985599Z",
-     "shell.execute_reply": "2022-04-14T22:00:47.984965Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "AssertionError",
@@ -150,14 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-04-14T22:00:47.988731Z",
-     "iopub.status.busy": "2022-04-14T22:00:47.988440Z",
-     "iopub.status.idle": "2022-04-14T22:00:47.991386Z",
-     "shell.execute_reply": "2022-04-14T22:00:47.990981Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -180,7 +177,7 @@
    "hash": "cc7b2a1767988fd8894055f999bc37e0cedcf372c09868088564c4af532681ed"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.2 ('py310-graviton': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -198,5 +195,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
