notebook as well

--- a/notebooks/quadratic_factoring_game.ipynb
+++ b/notebooks/quadratic_factoring_game.ipynb
@@ -25,7 +25,7 @@
     "import pandas as pd\n",
     "import plotly.graph_objects as go\n",
     "\n",
-    "from graviton.blackbox import DryRunExecutor\n",
+    "from graviton.blackbox import DryRunExecutor, DryRunTransactionParams as TxParams, ExecutionMode\n",
     "from tests.clients import get_algod\n",
     "algod = get_algod()"
    ]
@@ -162,8 +162,12 @@
     "args = (5,7)\n",
     "\n",
     "# Payment txn information:\n",
-    "pymt = {\"amt\": 10_000_000} \n",
-    "inspector = DryRunExecutor.dryrun_logicsig(algod, TEAL, args, **pymt)"
+    "txn = TxParams.for_logicsig(amt=10_000_000)\n",
+    "\n",
+    "# Use a single executor for the rest of the notebook:\n",
+    "executor = DryRunExecutor(algod, ExecutionMode.Signature, TEAL)\n",
+    "\n",
+    "inspector = executor.run_one(args, txn_params=txn)"
    ]
   },
   {
@@ -247,8 +251,9 @@
     "dryrun_results, txns = [], []\n",
     "for args, amt in zip(inputs, amts):\n",
     "    txn = {\"amt\": amt}\n",
+    "    txn_params = TxParams.for_logicsig(**txn)\n",
     "    txns.append(txn)\n",
-    "    dryrun_results.append(DryRunExecutor.dryrun_logicsig(algod, TEAL, args, **txn))"
+    "    dryrun_results.append(executor.run_one(args, txn_params=txn_params))"
    ]
   },
   {
@@ -315,7 +320,7 @@
        "      <td>NaN</td>\n",
        "      <td>REJECT</td>\n",
        "      <td>`None</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -339,7 +344,7 @@
        "      <td>NaN</td>\n",
        "      <td>REJECT</td>\n",
        "      <td>`None</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -363,7 +368,7 @@
        "      <td>NaN</td>\n",
        "      <td>REJECT</td>\n",
        "      <td>`None</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -387,7 +392,7 @@
        "      <td>NaN</td>\n",
        "      <td>REJECT</td>\n",
        "      <td>`None</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
@@ -411,7 +416,7 @@
        "      <td>NaN</td>\n",
        "      <td>REJECT</td>\n",
        "      <td>`None</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
@@ -459,7 +464,7 @@
        "      <td>NaN</td>\n",
        "      <td>REJECT</td>\n",
        "      <td>`None</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>19</td>\n",
        "      <td>15</td>\n",
        "      <td>0</td>\n",
@@ -483,7 +488,7 @@
        "      <td>NaN</td>\n",
        "      <td>REJECT</td>\n",
        "      <td>`None</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>19</td>\n",
        "      <td>16</td>\n",
        "      <td>0</td>\n",
@@ -507,7 +512,7 @@
        "      <td>NaN</td>\n",
        "      <td>REJECT</td>\n",
        "      <td>`None</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>19</td>\n",
        "      <td>17</td>\n",
        "      <td>0</td>\n",
@@ -531,7 +536,7 @@
        "      <td>NaN</td>\n",
        "      <td>REJECT</td>\n",
        "      <td>`None</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>19</td>\n",
        "      <td>18</td>\n",
        "      <td>0</td>\n",
@@ -555,7 +560,7 @@
        "      <td>NaN</td>\n",
        "      <td>REJECT</td>\n",
        "      <td>`None</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>19</td>\n",
        "      <td>19</td>\n",
        "      <td>0</td>\n",
@@ -579,17 +584,17 @@
       ],
       "text/plain": [
        "      Run  Status   cost  final_message  last_log   top_of_stack  Arg_00  \\\n",
-       "0       1  REJECT    NaN         REJECT     `None              0       0   \n",
-       "1       2  REJECT    NaN         REJECT     `None              0       0   \n",
-       "2       3  REJECT    NaN         REJECT     `None              0       0   \n",
-       "3       4  REJECT    NaN         REJECT     `None              0       0   \n",
-       "4       5  REJECT    NaN         REJECT     `None              0       0   \n",
+       "0       1  REJECT    NaN         REJECT     `None            NaN       0   \n",
+       "1       2  REJECT    NaN         REJECT     `None            NaN       0   \n",
+       "2       3  REJECT    NaN         REJECT     `None            NaN       0   \n",
+       "3       4  REJECT    NaN         REJECT     `None            NaN       0   \n",
+       "4       5  REJECT    NaN         REJECT     `None            NaN       0   \n",
        "..    ...     ...    ...            ...       ...            ...     ...   \n",
-       "395   396  REJECT    NaN         REJECT     `None              0      19   \n",
-       "396   397  REJECT    NaN         REJECT     `None              0      19   \n",
-       "397   398  REJECT    NaN         REJECT     `None              0      19   \n",
-       "398   399  REJECT    NaN         REJECT     `None              0      19   \n",
-       "399   400  REJECT    NaN         REJECT     `None              0      19   \n",
+       "395   396  REJECT    NaN         REJECT     `None            NaN      19   \n",
+       "396   397  REJECT    NaN         REJECT     `None            NaN      19   \n",
+       "397   398  REJECT    NaN         REJECT     `None            NaN      19   \n",
+       "398   399  REJECT    NaN         REJECT     `None            NaN      19   \n",
+       "399   400  REJECT    NaN         REJECT     `None            NaN      19   \n",
        "\n",
        "     Arg_01  amt  max_stack_height  ...  s@002  s@003  s@004  s@005  s@006  \\\n",
        "0         0    0                 4  ...   70.0    NaN      1     12     35   \n",
@@ -690,7 +695,7 @@
        "      <th>0</th>\n",
        "      <td>REJECT</td>\n",
        "      <td>REJECT</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -712,7 +717,7 @@
        "      <th>1</th>\n",
        "      <td>REJECT</td>\n",
        "      <td>REJECT</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -734,7 +739,7 @@
        "      <th>2</th>\n",
        "      <td>REJECT</td>\n",
        "      <td>REJECT</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -756,7 +761,7 @@
        "      <th>3</th>\n",
        "      <td>REJECT</td>\n",
        "      <td>REJECT</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
@@ -778,7 +783,7 @@
        "      <th>4</th>\n",
        "      <td>REJECT</td>\n",
        "      <td>REJECT</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
@@ -822,7 +827,7 @@
        "      <th>395</th>\n",
        "      <td>REJECT</td>\n",
        "      <td>REJECT</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>19</td>\n",
        "      <td>15</td>\n",
        "      <td>0</td>\n",
@@ -844,7 +849,7 @@
        "      <th>396</th>\n",
        "      <td>REJECT</td>\n",
        "      <td>REJECT</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>19</td>\n",
        "      <td>16</td>\n",
        "      <td>0</td>\n",
@@ -866,7 +871,7 @@
        "      <th>397</th>\n",
        "      <td>REJECT</td>\n",
        "      <td>REJECT</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>19</td>\n",
        "      <td>17</td>\n",
        "      <td>0</td>\n",
@@ -888,7 +893,7 @@
        "      <th>398</th>\n",
        "      <td>REJECT</td>\n",
        "      <td>REJECT</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>19</td>\n",
        "      <td>18</td>\n",
        "      <td>0</td>\n",
@@ -910,7 +915,7 @@
        "      <th>399</th>\n",
        "      <td>REJECT</td>\n",
        "      <td>REJECT</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>19</td>\n",
        "      <td>19</td>\n",
        "      <td>0</td>\n",
@@ -935,17 +940,17 @@
       ],
       "text/plain": [
        "     Status  final_message   top_of_stack   x   y  amt  max_stack_height  \\\n",
-       "0    REJECT         REJECT              0   0   0    0                 4   \n",
-       "1    REJECT         REJECT              0   0   1    0                 4   \n",
-       "2    REJECT         REJECT              0   0   2    0                 4   \n",
-       "3    REJECT         REJECT              0   0   3    0                 4   \n",
-       "4    REJECT         REJECT              0   0   4    0                 4   \n",
+       "0    REJECT         REJECT            0.0   0   0    0                 4   \n",
+       "1    REJECT         REJECT            0.0   0   1    0                 4   \n",
+       "2    REJECT         REJECT            0.0   0   2    0                 4   \n",
+       "3    REJECT         REJECT            0.0   0   3    0                 4   \n",
+       "4    REJECT         REJECT            0.0   0   4    0                 4   \n",
        "..      ...            ...            ...  ..  ..  ...               ...   \n",
-       "395  REJECT         REJECT              0  19  15    0                 4   \n",
-       "396  REJECT         REJECT              0  19  16    0                 4   \n",
-       "397  REJECT         REJECT              0  19  17    0                 4   \n",
-       "398  REJECT         REJECT              0  19  18    0                 4   \n",
-       "399  REJECT         REJECT              0  19  19    0                 4   \n",
+       "395  REJECT         REJECT            0.0  19  15    0                 4   \n",
+       "396  REJECT         REJECT            0.0  19  16    0                 4   \n",
+       "397  REJECT         REJECT            0.0  19  17    0                 4   \n",
+       "398  REJECT         REJECT            0.0  19  18    0                 4   \n",
+       "399  REJECT         REJECT            0.0  19  19    0                 4   \n",
        "\n",
        "     s@000  s@001  s@002  s@003  s@004  s@005  s@006  s@007  s@008  s@009  \\\n",
        "0     35.0   35.0   70.0    0.0      1     12     35    0.0     35    0.0   \n",
@@ -1045,7 +1050,7 @@
        "    <tr>\n",
        "      <th>107</th>\n",
        "      <td>PASS</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>5</td>\n",
        "      <td>7</td>\n",
        "      <td>10000000</td>\n",
@@ -1066,7 +1071,7 @@
       ],
       "text/plain": [
        "     Status   top_of_stack  x  y       amt  s@000  s@001  s@002       s@003  \\\n",
-       "107    PASS              1  5  7  10000000    0.0    0.0    0.0  10000000.0   \n",
+       "107    PASS            1.0  5  7  10000000    0.0    0.0    0.0  10000000.0   \n",
        "\n",
        "     s@004  s@005  s@006  s@007  s@008  s@009  \n",
        "107      1     12     35    7.0     84   84.0  "
@@ -1118,7 +1123,8 @@
     "    for x in X:\n",
     "        row = []\n",
     "        for y in Y:\n",
-    "            row.append(DryRunExecutor.dryrun_logicsig(algod, TEAL, (x, y), amt=payment_amount(x,y)))\n",
+    "            txn_params = TxParams.for_logicsig(amt=payment_amount(x,y))\n",
+    "            row.append(executor.run((x, y),txn_params=txn_params))\n",
     "        Z.append(row)\n",
     "\n",
     "    return X, Y, Z"
@@ -8214,21 +8220,11 @@
    "source": [
     "blackbox_plot(xs, ys, zs)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "cc7b2a1767988fd8894055f999bc37e0cedcf372c09868088564c4af532681ed"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.2 ('py310-graviton': venv)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -8242,9 +8238,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.1"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "a77191ba92f2943d1a774acb6c6c3997b8927cbdda28e3b65c414b7e4100969f"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
